# challenge_word_classifier

./: README.md
blog/: 01-rules.md  02-faq.md  03-testing-progress.md  04-preliminary-standings.md  05-final-standings.md  06-learning-solutions.md
res-learning/: 10k-restart.json  1m.json
submissions/5720ebb893f2f29d3c9acbae/: solution.js
submissions/5720ebd293f2f29d3c9acbaf/: solution.js
submissions/572129ed93f2f29d3c9acbb6/: solution.js
submissions/57212e1293f2f29d3c9acbb7/: solution.js
submissions/57212f5993f2f29d3c9acbb8/: solution.js
submissions/5721354793f2f29d3c9acbb9/: solution.js
submissions/5721417f93f2f29d3c9acbba/: solution.js
submissions/5721512b93f2f29d3c9acbbc/: data
submissions/572175b393f2f29d3c9acbbd/: solution.js
submissions/5721ac2f93f2f29d3c9acbc2/: solution.js
submissions/5721c3ad93f2f29d3c9acbc5/: solution.js
submissions/5748b42363905b3a11d97cc0/src/analyzer/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp
submissions/5748b42363905b3a11d97cc0/src/analyzer/filemanager/: char_combination.h  character_occurence_analyzer.cpp  character_occurence_analyzer.h  combination_filewriter.h  combination_filewriter.tpp  constants.h  converter.cpp  converter.h  endings_analyzer.h  endings_analyzer.tpp  file_utils.cpp  file_utils.h  logger.h  settings.cpp  settings.h  start_analyzer.h  start_analyzer.tpp  tree_file_elimination.cpp  tree_file_elimination.h  tree_file_elimination.tpp  tree_file_strength.h  tree_file_strength.tpp  utils.cpp
tests/: generate.js  generator.js  loader.js  package.json  test.js  test2.js
(+3368 files in other folders)
